# rna-struct-learning

./: .gitignore  README.md  pyproject.toml
_results/: bench_results_bpp_intimg.json  bench_results_bpp_intimg_banded.json  bench_results_bpp_n3.json  bench_results_bpp_n4.json  bench_results_bpp_windowed.json  reactivity_summary.json  reactivity_summary_normalised.json  reactivity_test_eval_2a3_eternafold.json  reactivity_test_eval_2a3_viennarna.json  reactivity_test_eval_2a3norm_eternafold.json  reactivity_test_eval_2a3norm_viennarna.json  reactivity_test_eval_dms_eternafold.json  reactivity_test_eval_dms_viennarna.json  reactivity_test_eval_dmsnorm_eternafold.json  reactivity_test_eval_dmsnorm_viennarna.json  structure_test_eval_baseline_fullstem.json  structure_test_eval_baseline_nopairs.json  structure_test_eval_eternafold.json  structure_test_eval_viennarna.json
_results/probnuss0_randstart/: TrainedEnergies.txt  config.yaml  energy_history.npy  training_log.csv
_results/probnuss0_zerostart/: TrainedEnergies.txt  energy_history.npy  training_log.csv
_results/probnuss11/: TrainedEnergies.txt  config.yaml  energy_history.npy  reactivity_2a3_test_eval_probnuss.json  reactivity_2a3norm_test_eval_probnuss.json  reactivity_dms_test_eval_probnuss.json  reactivity_dmsnorm_test_eval_probnuss.json  structure_test_eval_probnuss.json  training_log.csv
_results/probnuss12/: TrainedEnergies.txt  config.yaml  energy_history.npy  reactivity_2a3_test_eval_probnuss.json  reactivity_2a3norm_test_eval_probnuss.json  reactivity_dms_test_eval_probnuss.json  reactivity_dmsnorm_test_eval_probnuss.json  (+2 more)
params/: NussinovParamsDefault.v1  config_example.yaml
scripts/: analyse_dataset_structures.py  analyse_datasets_reactivity.py  combine_datasets.py  cuda_check.py  preprocess_reactivities.py  test_cuda.sh
tests/: bench.py  test_helper.py  test_nussinov_ensemble.py  test_nussinov_ensemble_jax.py  test_nussinov_mfe.py
(+54 files in other folders)
